login and logout functionalities are added

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
-                        <div>
+                        <div style="margin: 2%">
                             <input type="submit" class="btn btn-lg btn-primary   value="Log In">
                         </div>
                     </fieldset>
