--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,8 +9,45 @@
             .container-fluid {padding:50px;}
             .container{background-color:white;padding:50px;   }
             #title{font-family: 'Lobster', cursive;;}
+            .div_class{
+                    margin: 0 auto;
+                    width:20%;
+                }
+            .div_class_1{
+				            margin: 5%;
+			        }
+            #heading{
+                  font-size: 30px;
+            }
         </style>
-        {% with messages = get_flashed_messages() %}
+    </head>
+    <body>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" id="heading"href="#">BOOKSPACE</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-items">
+                          <a class="nav-link" href="/quote">Quote</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="/buy">Buy</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="/sell">Sell</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">History</a>
+                        </li>
+                      </ul>
+                      <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                    </ul>
+                    </div>
+            </nav>
+            {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul class=flashes>
                 {% for message in messages %}
@@ -19,8 +56,6 @@
                 </ul>
             {% endif %}
         {% endwith %}
-    </head>
-    <body>
         {% block body %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
