--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
             <div class="col-md-5">
                  <form role="form" method="post">
                     <fieldset>							
-                        <p class="text-uppercase pull-center"> SIGN UP</p>	
+                        <p class="text-uppercase pull-center"><!--  -->SIGN UP</p>	
                          <div class="form-group">
                             <input type="text" name="username" id="username" class="form-control input-lg" placeholder="username">
                         </div>
