--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,14 +21,14 @@
             }
         </style>
     </head>
-    <body>
+    <body style="margin:5%">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" id="heading"href="#">BOOKSPACE</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
+                     <!-- <ul class="navbar-nav">
                         <li class="nav-items">
                           <a class="nav-link" href="/quote">Quote</a>
                         </li>
@@ -38,10 +38,8 @@
                         <li class="nav-item">
                           <a class="nav-link" href="/sell">Sell</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">History</a>
-                        </li>
-                      </ul>
+                        
+                      </ul>-->
                       <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                     </ul>
